<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HostelManagement</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="mailid">E-Mail id</string>
    <string name="pwd">Password</string>
    <string name="confrmpwd">Confirm Password</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="des">Description</string>
    <string name="submit">SUBMIT</string>
    <string name="cust">Customers</string>
    <string name="hostler">Hostlers</string>
    <string name="customer">Customer</string>
    <string name="hostl">Hostler</string>
    <string name="namee">Name</string>
    <string name="pass">Password</string>
    <string name="signup">SIGNUP</string>
    <string name="nam">Name</string>
    <string name="password">Password</string>
    <string name="signin">SIGNIN</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="title_activity_hostel_home">HostelHomeActivity</string>
    <string name="title_activity_create_hostel">CreateHostelActivity</string>
    <string name="hname">hostelname</string>
    <string name="lat">latitude</string>
    <string name="longi">longitude</string>
    <string name="l1">Find Location..</string>
    <string name="add">Address</string>
    <string name="place">Place</string>
    <string name="desciption">Description</string>
    <string name="save">SAVE</string>
    <string name="crhstl">Create Hostel</string>
    <string name="createhstl">Create Hostel</string>
    <string name="title_activity_create_roomtype">CreateRoomtypeActivity</string>
    <string name="rtype">Room Type</string>
    <string name="nob">No of beds</string>
    <string name="desc">Description</string>
    <string name="b1">SUBMIT</string>
    <string name="creatertype">Select Roomtype</string>
    <string name="title_activity_create_room">CreateRoomActivity</string>
    <string name="price">Price</string>
    <string name="availability">Availability</string>
    <string name="b2">SAVE</string>

    <string-array name="spinnerarr">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="selectroom">Select Room</string>
    <string name="title_activity_create_review">CreateReviewActivity</string>
    <string name="hid">Hostel id</string>
    <string name="de">Description</string>
    <string name="b4">SUBMIT</string>
    <string name="review">review</string>
    <string name="rev">Review</string>
    <string name="title_activity_search_hostel">SearchHostelActivity</string>
    <string name="searchhostel">Search Hostel</string>
    <string name="title_activity_create_booking">CreateBookingActivity</string>
    <string name="fd">From Date</string>
    <string name="td">To Date</string>
    <string name="book">BOOK</string>
    <string name="reason">Reason</string>
    <string name="idproof">Id Proof</string>
    <string name="title_activity_view_hostels">ViewHostelsActivity</string>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="booking">BOOK</string>
    <string name="signi">Sign in</string>
    <string name="signu">Sign up</string>
    <string name="title_activity_booking_details">BookingDetailsActivity</string>
    <string name="Bookingid">Bid</string>
    <string name="fdate">Fdate</string>
    <string name="tdate">Tdate</string>
    <string name="hostelid">Hid</string>
    <string name="roomid">Rid</string>
    <string name="roomidd">Roomid</string>
    <string name="hostelidd">Hostelid</string>
    <string name="bookingid">Bookingid</string>
    <string name="roomtype">Roomtype</string>
    <string name="nobb">No of beds</string>
    <string name="pricee">Price</string>
    <string name="availabilityy">Availability</string>
    <string name="idprooff">ID Proof</string>
    <string name="status">Status</string>
    <string name="nameee">Name</string>
    <string name="description">Description</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="title_activity_view_customer">ViewCustomerActivity</string>
    <string name="custdetail">Customer Detail</string>
    <string name="contct">Contact Number</string>
    <string name="contact">Contact Number</string>
    <string name="sel">Select hostel</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="done">Done by</string>
    <string name="don">DONE BY</string>
    <string name="shil">SHILPA S</string>
    <string name="sher">SHERIL ANN JOHN</string>
    <color name="col_1">#55ff4d4d</color>
    <color name="bla">#000000</color>

</resources>
